// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseChargeSeries > should error when period is invalid 1`] = `
{
  "errors": [
    {
      "index": 0,
      "key": "INVALID_PERIOD",
    },
  ],
  "interval": null,
  "isFatal": true,
  "points": 0,
  "progress": 39,
  "resolution": "QUARTER_HOURLY",
}
`;

exports[`parseChargeSeries > should error when position is invalid 1`] = `
{
  "errors": [
    {
      "index": 0,
      "key": "INVALID_POSITION",
    },
  ],
  "interval": {
    "end": 2025-10-25T23:15:00.000Z,
    "start": 2025-10-25T22:00:00.000Z,
  },
  "isFatal": false,
  "points": 4,
  "progress": 100,
  "resolution": "QUARTER_HOURLY",
}
`;

exports[`parseChargeSeries > should error when price is invalid 1`] = `
{
  "errors": [
    {
      "index": 0,
      "key": "INVALID_PRICE",
    },
  ],
  "interval": {
    "end": 2025-10-25T23:15:00.000Z,
    "start": 2025-10-25T22:00:00.000Z,
  },
  "isFatal": false,
  "points": 4,
  "progress": 100,
  "resolution": "QUARTER_HOURLY",
}
`;

exports[`parseChargeSeries > should error when second entry in monthly resolution is not on first of month 1`] = `
{
  "errors": [
    {
      "index": 1,
      "key": "MISSING_POINT",
    },
  ],
  "interval": {
    "end": 2025-02-28T23:00:00.000Z,
    "start": 2025-01-14T23:00:00.000Z,
  },
  "isFatal": true,
  "points": 1,
  "progress": 77,
  "resolution": "MONTHLY",
}
`;

exports[`parseChargeSeries > should error when structure is unexpected 1`] = `
{
  "errors": [
    {
      "index": 0,
      "key": "STRUCTURE",
    },
  ],
  "interval": null,
  "isFatal": true,
  "points": 0,
  "progress": 26,
  "resolution": "MONTHLY",
}
`;

exports[`parseChargeSeries > should error when third entry in monthly resolution is not on first of month 1`] = `
{
  "errors": [
    {
      "index": 2,
      "key": "MISSING_POINT",
    },
  ],
  "interval": {
    "end": 2025-04-14T22:00:00.000Z,
    "start": 2025-01-14T23:00:00.000Z,
  },
  "isFatal": true,
  "points": 2,
  "progress": 100,
  "resolution": "MONTHLY",
}
`;

exports[`parseChargeSeries > should error with missing points in daily resolution 1`] = `
{
  "errors": [
    {
      "index": 2,
      "key": "MISSING_POINT",
    },
  ],
  "interval": {
    "end": 2025-01-04T23:00:00.000Z,
    "start": 2024-12-31T23:00:00.000Z,
  },
  "isFatal": true,
  "points": 2,
  "progress": 81,
  "resolution": "DAILY",
}
`;

exports[`parseChargeSeries > should error with missing points in hourly resolution 1`] = `
{
  "errors": [
    {
      "index": 1,
      "key": "MISSING_POINT",
    },
  ],
  "interval": {
    "end": 2025-04-28T01:00:00.000Z,
    "start": 2025-04-27T22:00:00.000Z,
  },
  "isFatal": true,
  "points": 1,
  "progress": 62,
  "resolution": "HOURLY",
}
`;

exports[`parseChargeSeries > should error with missing points in monthly resolution 1`] = `
{
  "errors": [
    {
      "index": 2,
      "key": "MISSING_POINT",
    },
  ],
  "interval": {
    "end": 2025-04-30T22:00:00.000Z,
    "start": 2024-12-31T23:00:00.000Z,
  },
  "isFatal": true,
  "points": 2,
  "progress": 81,
  "resolution": "MONTHLY",
}
`;

exports[`parseChargeSeries > should error with missing points in quarter hourly resolution 1`] = `
{
  "errors": [
    {
      "index": 1,
      "key": "MISSING_POINT",
    },
  ],
  "interval": {
    "end": 2025-04-27T22:45:00.000Z,
    "start": 2025-04-27T22:00:00.000Z,
  },
  "isFatal": true,
  "points": 1,
  "progress": 62,
  "resolution": "QUARTER_HOURLY",
}
`;

exports[`parseChargeSeries > should error with unexpected points in daily resolution 1`] = `
{
  "errors": [
    {
      "index": 5,
      "key": "UNEXPECTED_POINT",
    },
  ],
  "interval": {
    "end": 2025-01-05T23:00:00.000Z,
    "start": 2024-12-31T23:00:00.000Z,
  },
  "isFatal": true,
  "points": 5,
  "progress": 100,
  "resolution": "DAILY",
}
`;

exports[`parseChargeSeries > should error with unexpected points in hourly resolution 1`] = `
{
  "errors": [
    {
      "index": 1,
      "key": "UNEXPECTED_POINT",
    },
  ],
  "interval": {
    "end": 2025-04-27T23:15:00.000Z,
    "start": 2025-04-27T22:00:00.000Z,
  },
  "isFatal": true,
  "points": 1,
  "progress": 52,
  "resolution": "HOURLY",
}
`;

exports[`parseChargeSeries > should error with unexpected points in monthly resolution 1`] = `
{
  "errors": [
    {
      "index": 5,
      "key": "UNEXPECTED_POINT",
    },
  ],
  "interval": {
    "end": 2025-05-31T22:00:00.000Z,
    "start": 2024-12-31T23:00:00.000Z,
  },
  "isFatal": true,
  "points": 5,
  "progress": 100,
  "resolution": "MONTHLY",
}
`;

exports[`parseChargeSeries > should error with unexpected points in quarter hourly resolution 1`] = `
{
  "errors": [
    {
      "index": 1,
      "key": "UNEXPECTED_POINT",
    },
  ],
  "interval": {
    "end": 2025-04-27T22:20:00.000Z,
    "start": 2025-04-27T22:00:00.000Z,
  },
  "isFatal": true,
  "points": 1,
  "progress": 62,
  "resolution": "QUARTER_HOURLY",
}
`;

exports[`parseChargeSeries > should handle DST end correctly in hourly resolution 1`] = `
{
  "errors": [],
  "interval": {
    "end": 2025-10-26T04:00:00.000Z,
    "start": 2025-10-25T22:00:00.000Z,
  },
  "isFatal": false,
  "points": 6,
  "progress": 100,
  "resolution": "HOURLY",
}
`;

exports[`parseChargeSeries > should handle DST end correctly in quarter hourly resolution 1`] = `
{
  "errors": [],
  "interval": {
    "end": 2025-10-26T03:15:00.000Z,
    "start": 2025-10-25T22:00:00.000Z,
  },
  "isFatal": false,
  "points": 21,
  "progress": 100,
  "resolution": "QUARTER_HOURLY",
}
`;

exports[`parseChargeSeries > should handle DST start correctly in hourly resolution 1`] = `
{
  "errors": [],
  "interval": {
    "end": 2025-03-30T04:00:00.000Z,
    "start": 2025-03-29T23:00:00.000Z,
  },
  "isFatal": false,
  "points": 5,
  "progress": 100,
  "resolution": "HOURLY",
}
`;

exports[`parseChargeSeries > should handle DST start correctly in quarter hourly resolution 1`] = `
{
  "errors": [],
  "interval": {
    "end": 2025-03-30T02:15:00.000Z,
    "start": 2025-03-29T23:00:00.000Z,
  },
  "isFatal": false,
  "points": 13,
  "progress": 100,
  "resolution": "QUARTER_HOURLY",
}
`;

exports[`parseChargeSeries > should parse monthly resolution with first entry on last day of month 1`] = `
{
  "errors": [],
  "interval": {
    "end": 2025-04-30T22:00:00.000Z,
    "start": 2025-01-30T23:00:00.000Z,
  },
  "isFatal": false,
  "points": 4,
  "progress": 100,
  "resolution": "MONTHLY",
}
`;

exports[`parseChargeSeries > should parse monthly resolution with first entry starting mid-month 1`] = `
{
  "errors": [],
  "interval": {
    "end": 2025-05-31T22:00:00.000Z,
    "start": 2025-01-14T23:00:00.000Z,
  },
  "isFatal": false,
  "points": 5,
  "progress": 100,
  "resolution": "MONTHLY",
}
`;

exports[`parseChargeSeries > should parse points in daily resolution 1`] = `
{
  "errors": [],
  "interval": {
    "end": 2025-05-02T22:00:00.000Z,
    "start": 2025-04-27T22:00:00.000Z,
  },
  "isFatal": false,
  "points": 5,
  "progress": 100,
  "resolution": "DAILY",
}
`;

exports[`parseChargeSeries > should parse points in hourly resolution 1`] = `
{
  "errors": [],
  "interval": {
    "end": 2025-04-28T03:00:00.000Z,
    "start": 2025-04-27T22:00:00.000Z,
  },
  "isFatal": false,
  "points": 5,
  "progress": 100,
  "resolution": "HOURLY",
}
`;

exports[`parseChargeSeries > should parse points in monthly resolution 1`] = `
{
  "errors": [],
  "interval": {
    "end": 2025-11-30T23:00:00.000Z,
    "start": 2024-12-31T23:00:00.000Z,
  },
  "isFatal": false,
  "points": 11,
  "progress": 100,
  "resolution": "MONTHLY",
}
`;

exports[`parseChargeSeries > should parse points in quarter hourly resolution 1`] = `
{
  "errors": [],
  "interval": {
    "end": 2025-04-27T23:15:00.000Z,
    "start": 2025-04-27T22:00:00.000Z,
  },
  "isFatal": false,
  "points": 5,
  "progress": 100,
  "resolution": "QUARTER_HOURLY",
}
`;
